// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publish publish an extension 1`] = `
Array [
  "packages",
  "packages/another",
  "packages/another/another.control",
  "packages/another/deploy",
  "packages/another/deploy/schemas",
  "packages/another/deploy/schemas/myschema",
  "packages/another/deploy/schemas/myschema/schema.sql",
  "packages/another/Makefile",
  "packages/another/package.json",
  "packages/another/revert",
  "packages/another/revert/schemas",
  "packages/another/revert/schemas/myschema",
  "packages/another/revert/schemas/myschema/schema.sql",
  "packages/another/sqitch.conf",
  "packages/another/sqitch.plan",
  "packages/another/sql",
  "packages/another/sql/another--0.0.1.sql",
  "packages/another/test",
  "packages/another/test/utils",
  "packages/another/test/utils/index.js",
  "packages/another/verify",
  "packages/another/verify/schemas",
  "packages/another/verify/schemas/myschema",
  "packages/another/verify/schemas/myschema/schema.sql",
  "packages/secrets",
  "packages/secrets/deploy",
  "packages/secrets/deploy/procedures",
  "packages/secrets/deploy/procedures/secretfunction.sql",
  "packages/secrets/Makefile",
  "packages/secrets/package.json",
  "packages/secrets/revert",
  "packages/secrets/revert/procedures",
  "packages/secrets/revert/procedures/secretfunction.sql",
  "packages/secrets/secrets.control",
  "packages/secrets/sqitch.conf",
  "packages/secrets/sqitch.plan",
  "packages/secrets/sql",
  "packages/secrets/sql/secrets--0.0.1.sql",
  "packages/secrets/verify",
  "packages/secrets/verify/procedures",
  "packages/secrets/verify/procedures/secretfunction.sql",
  "packages/totp",
  "packages/totp/deploy",
  "packages/totp/deploy/procedures",
  "packages/totp/deploy/procedures/generate_secret.sql",
  "packages/totp/deploy/some",
  "packages/totp/deploy/some/change.sql",
  "packages/totp/Makefile",
  "packages/totp/package.json",
  "packages/totp/revert",
  "packages/totp/revert/procedures",
  "packages/totp/revert/procedures/generate_secret.sql",
  "packages/totp/revert/some",
  "packages/totp/revert/some/change.sql",
  "packages/totp/sqitch.conf",
  "packages/totp/sqitch.plan",
  "packages/totp/sql",
  "packages/totp/sql/totp--0.0.1.sql",
  "packages/totp/totp.control",
  "packages/totp/verify",
  "packages/totp/verify/procedures",
  "packages/totp/verify/procedures/generate_secret.sql",
  "packages/totp/verify/some",
  "packages/totp/verify/some/change.sql",
  "skitch.json",
]
`;

exports[`publish publish an extension 2`] = `
Array [
  "packages",
  "packages/another",
  "packages/another/another.control",
  "packages/another/deploy",
  "packages/another/deploy/schemas",
  "packages/another/deploy/schemas/myschema",
  "packages/another/deploy/schemas/myschema/schema.sql",
  "packages/another/Makefile",
  "packages/another/package.json",
  "packages/another/revert",
  "packages/another/revert/schemas",
  "packages/another/revert/schemas/myschema",
  "packages/another/revert/schemas/myschema/schema.sql",
  "packages/another/sqitch.conf",
  "packages/another/sqitch.plan",
  "packages/another/sql",
  "packages/another/sql/another--0.0.1.sql",
  "packages/another/test",
  "packages/another/test/utils",
  "packages/another/test/utils/index.js",
  "packages/another/verify",
  "packages/another/verify/schemas",
  "packages/another/verify/schemas/myschema",
  "packages/another/verify/schemas/myschema/schema.sql",
  "packages/secrets",
  "packages/secrets/deploy",
  "packages/secrets/deploy/procedures",
  "packages/secrets/deploy/procedures/secretfunction.sql",
  "packages/secrets/deploy/updates",
  "packages/secrets/deploy/updates/totp",
  "packages/secrets/deploy/updates/totp/0.1.0.sql",
  "packages/secrets/Makefile",
  "packages/secrets/package.json",
  "packages/secrets/revert",
  "packages/secrets/revert/procedures",
  "packages/secrets/revert/procedures/secretfunction.sql",
  "packages/secrets/revert/updates",
  "packages/secrets/revert/updates/totp",
  "packages/secrets/revert/updates/totp/0.1.0.sql",
  "packages/secrets/secrets.control",
  "packages/secrets/sqitch.conf",
  "packages/secrets/sqitch.plan",
  "packages/secrets/sql",
  "packages/secrets/sql/secrets--0.1.0.sql",
  "packages/secrets/verify",
  "packages/secrets/verify/procedures",
  "packages/secrets/verify/procedures/secretfunction.sql",
  "packages/secrets/verify/updates",
  "packages/secrets/verify/updates/totp",
  "packages/secrets/verify/updates/totp/0.1.0.sql",
  "packages/totp",
  "packages/totp/deploy",
  "packages/totp/deploy/procedures",
  "packages/totp/deploy/procedures/generate_secret.sql",
  "packages/totp/deploy/some",
  "packages/totp/deploy/some/change.sql",
  "packages/totp/Makefile",
  "packages/totp/package.json",
  "packages/totp/revert",
  "packages/totp/revert/procedures",
  "packages/totp/revert/procedures/generate_secret.sql",
  "packages/totp/revert/some",
  "packages/totp/revert/some/change.sql",
  "packages/totp/sqitch.conf",
  "packages/totp/sqitch.plan",
  "packages/totp/sql",
  "packages/totp/sql/totp--0.1.0.sql",
  "packages/totp/totp.control",
  "packages/totp/verify",
  "packages/totp/verify/procedures",
  "packages/totp/verify/procedures/generate_secret.sql",
  "packages/totp/verify/some",
  "packages/totp/verify/some/change.sql",
  "skitch.json",
]
`;
